# evidenciesib-model/src/main/java/es/caib/evidenciesib/model/bean/EvidenciaBean.java
@@ -10,10 +10,11 @@ public class EvidenciaBean implements Evidencia {
 
 	long evidenciaID;// PK
 	java.lang.String nom;
+	java.lang.String personaNif;
+	java.lang.String personaUsername;
 	java.lang.String personaNom;
 	java.lang.String personaLlinatge1;
 	java.lang.String personaLlinatge2;
-	java.lang.String personaNif;
 	java.lang.String personaEmail;
 	java.lang.String personaMobil;
 	java.sql.Timestamp dataInici;
@@ -34,8 +35,8 @@ public class EvidenciaBean implements Evidencia {
 	java.lang.String localitzacioCodiPostal;
 	java.lang.String localitzacioLatitud;
 	java.lang.String localitzacioLongitud;
-	java.lang.String localitzacioCiutat;
 	java.lang.String localitzacioRegio;
+	java.lang.String localitzacioCiutat;
 	java.lang.String localitzacioPais;
 	java.lang.String firmaReason;
 	java.lang.String firmaIdiomaDocument;
@@ -51,13 +52,14 @@ public class EvidenciaBean implements Evidencia {
   }
 
   /** Constructor amb tots els camps  */
-  public EvidenciaBean(long evidenciaID , java.lang.String nom , java.lang.String personaNom , java.lang.String personaLlinatge1 , java.lang.String personaLlinatge2 , java.lang.String personaNif , java.lang.String personaEmail , java.lang.String personaMobil , java.sql.Timestamp dataInici , java.sql.Timestamp dataFi , java.lang.String usuariAplicacio , java.lang.String usuariPersona , int estatCodi , java.lang.String estatError , java.lang.String estatExcepcio , int loginType , java.lang.String loginSubtype , java.lang.String loginQaa , java.sql.Timestamp loginData , java.lang.String loginId , java.lang.String loginAuthMethod , java.lang.String loginAdditionalProperties , java.lang.String localitzacioIp , java.lang.String localitzacioCodiPostal , java.lang.String localitzacioLatitud , java.lang.String localitzacioLongitud , java.lang.String localitzacioCiutat , java.lang.String localitzacioRegio , java.lang.String localitzacioPais , java.lang.String firmaReason , java.lang.String firmaIdiomaDocument , int firmaTipusDocumental , long fitxerOriginalID , java.lang.Long fitxerAdaptatID , java.lang.Long fitxerSignatID , java.lang.String callBackUrl) {
+  public EvidenciaBean(long evidenciaID , java.lang.String nom , java.lang.String personaNif , java.lang.String personaUsername , java.lang.String personaNom , java.lang.String personaLlinatge1 , java.lang.String personaLlinatge2 , java.lang.String personaEmail , java.lang.String personaMobil , java.sql.Timestamp dataInici , java.sql.Timestamp dataFi , java.lang.String usuariAplicacio , java.lang.String usuariPersona , int estatCodi , java.lang.String estatError , java.lang.String estatExcepcio , int loginType , java.lang.String loginSubtype , java.lang.String loginQaa , java.sql.Timestamp loginData , java.lang.String loginId , java.lang.String loginAuthMethod , java.lang.String loginAdditionalProperties , java.lang.String localitzacioIp , java.lang.String localitzacioCodiPostal , java.lang.String localitzacioLatitud , java.lang.String localitzacioLongitud , java.lang.String localitzacioRegio , java.lang.String localitzacioCiutat , java.lang.String localitzacioPais , java.lang.String firmaReason , java.lang.String firmaIdiomaDocument , int firmaTipusDocumental , long fitxerOriginalID , java.lang.Long fitxerAdaptatID , java.lang.Long fitxerSignatID , java.lang.String callBackUrl) {
     this.evidenciaID=evidenciaID;
     this.nom=nom;
+    this.personaNif=personaNif;
+    this.personaUsername=personaUsername;
     this.personaNom=personaNom;
     this.personaLlinatge1=personaLlinatge1;
     this.personaLlinatge2=personaLlinatge2;
-    this.personaNif=personaNif;
     this.personaEmail=personaEmail;
     this.personaMobil=personaMobil;
     this.dataInici=dataInici;
@@ -78,8 +80,8 @@ public class EvidenciaBean implements Evidencia {
     this.localitzacioCodiPostal=localitzacioCodiPostal;
     this.localitzacioLatitud=localitzacioLatitud;
     this.localitzacioLongitud=localitzacioLongitud;
-    this.localitzacioCiutat=localitzacioCiutat;
     this.localitzacioRegio=localitzacioRegio;
+    this.localitzacioCiutat=localitzacioCiutat;
     this.localitzacioPais=localitzacioPais;
     this.firmaReason=firmaReason;
     this.firmaIdiomaDocument=firmaIdiomaDocument;
@@ -90,12 +92,13 @@ public class EvidenciaBean implements Evidencia {
     this.callBackUrl=callBackUrl;
 }
   /** Constructor sense valors autoincrementals */
-  public EvidenciaBean(java.lang.String nom , java.lang.String personaNom , java.lang.String personaLlinatge1 , java.lang.String personaLlinatge2 , java.lang.String personaNif , java.lang.String personaEmail , java.lang.String personaMobil , java.sql.Timestamp dataInici , java.sql.Timestamp dataFi , java.lang.String usuariAplicacio , java.lang.String usuariPersona , int estatCodi , java.lang.String estatError , java.lang.String estatExcepcio , int loginType , java.lang.String loginSubtype , java.lang.String loginQaa , java.sql.Timestamp loginData , java.lang.String loginId , java.lang.String loginAuthMethod , java.lang.String loginAdditionalProperties , java.lang.String localitzacioIp , java.lang.String localitzacioCodiPostal , java.lang.String localitzacioLatitud , java.lang.String localitzacioLongitud , java.lang.String localitzacioCiutat , java.lang.String localitzacioRegio , java.lang.String localitzacioPais , java.lang.String firmaReason , java.lang.String firmaIdiomaDocument , int firmaTipusDocumental , long fitxerOriginalID , java.lang.Long fitxerAdaptatID , java.lang.Long fitxerSignatID , java.lang.String callBackUrl) {
+  public EvidenciaBean(java.lang.String nom , java.lang.String personaNif , java.lang.String personaUsername , java.lang.String personaNom , java.lang.String personaLlinatge1 , java.lang.String personaLlinatge2 , java.lang.String personaEmail , java.lang.String personaMobil , java.sql.Timestamp dataInici , java.sql.Timestamp dataFi , java.lang.String usuariAplicacio , java.lang.String usuariPersona , int estatCodi , java.lang.String estatError , java.lang.String estatExcepcio , int loginType , java.lang.String loginSubtype , java.lang.String loginQaa , java.sql.Timestamp loginData , java.lang.String loginId , java.lang.String loginAuthMethod , java.lang.String loginAdditionalProperties , java.lang.String localitzacioIp , java.lang.String localitzacioCodiPostal , java.lang.String localitzacioLatitud , java.lang.String localitzacioLongitud , java.lang.String localitzacioRegio , java.lang.String localitzacioCiutat , java.lang.String localitzacioPais , java.lang.String firmaReason , java.lang.String firmaIdiomaDocument , int firmaTipusDocumental , long fitxerOriginalID , java.lang.Long fitxerAdaptatID , java.lang.Long fitxerSignatID , java.lang.String callBackUrl) {
     this.nom=nom;
+    this.personaNif=personaNif;
+    this.personaUsername=personaUsername;
     this.personaNom=personaNom;
     this.personaLlinatge1=personaLlinatge1;
     this.personaLlinatge2=personaLlinatge2;
-    this.personaNif=personaNif;
     this.personaEmail=personaEmail;
     this.personaMobil=personaMobil;
     this.dataInici=dataInici;
@@ -116,8 +119,8 @@ public class EvidenciaBean implements Evidencia {
     this.localitzacioCodiPostal=localitzacioCodiPostal;
     this.localitzacioLatitud=localitzacioLatitud;
     this.localitzacioLongitud=localitzacioLongitud;
-    this.localitzacioCiutat=localitzacioCiutat;
     this.localitzacioRegio=localitzacioRegio;
+    this.localitzacioCiutat=localitzacioCiutat;
     this.localitzacioPais=localitzacioPais;
     this.firmaReason=firmaReason;
     this.firmaIdiomaDocument=firmaIdiomaDocument;
@@ -128,11 +131,9 @@ public class EvidenciaBean implements Evidencia {
     this.callBackUrl=callBackUrl;
 }
   /** Constructor dels valors Not Null */
-  public EvidenciaBean(long evidenciaID , java.lang.String nom , java.lang.String personaNom , java.lang.String personaLlinatge1 , java.lang.String personaNif , java.sql.Timestamp dataInici , int estatCodi , int loginType , java.lang.String firmaReason , int firmaTipusDocumental , long fitxerOriginalID , java.lang.String callBackUrl) {
+  public EvidenciaBean(long evidenciaID , java.lang.String nom , java.lang.String personaNif , java.sql.Timestamp dataInici , int estatCodi , int loginType , java.lang.String firmaReason , int firmaTipusDocumental , long fitxerOriginalID , java.lang.String callBackUrl) {
     this.evidenciaID=evidenciaID;
     this.nom=nom;
-    this.personaNom=personaNom;
-    this.personaLlinatge1=personaLlinatge1;
     this.personaNif=personaNif;
     this.dataInici=dataInici;
     this.estatCodi=estatCodi;
@@ -145,10 +146,11 @@ public class EvidenciaBean implements Evidencia {
   public EvidenciaBean(Evidencia __bean) {
     this.setEvidenciaID(__bean.getEvidenciaID());
     this.setNom(__bean.getNom());
+    this.setPersonaNif(__bean.getPersonaNif());
+    this.setPersonaUsername(__bean.getPersonaUsername());
     this.setPersonaNom(__bean.getPersonaNom());
     this.setPersonaLlinatge1(__bean.getPersonaLlinatge1());
     this.setPersonaLlinatge2(__bean.getPersonaLlinatge2());
-    this.setPersonaNif(__bean.getPersonaNif());
     this.setPersonaEmail(__bean.getPersonaEmail());
     this.setPersonaMobil(__bean.getPersonaMobil());
     this.setDataInici(__bean.getDataInici());
@@ -169,8 +171,8 @@ public class EvidenciaBean implements Evidencia {
     this.setLocalitzacioCodiPostal(__bean.getLocalitzacioCodiPostal());
     this.setLocalitzacioLatitud(__bean.getLocalitzacioLatitud());
     this.setLocalitzacioLongitud(__bean.getLocalitzacioLongitud());
-    this.setLocalitzacioCiutat(__bean.getLocalitzacioCiutat());
     this.setLocalitzacioRegio(__bean.getLocalitzacioRegio());
+    this.setLocalitzacioCiutat(__bean.getLocalitzacioCiutat());
     this.setLocalitzacioPais(__bean.getLocalitzacioPais());
     this.setFirmaReason(__bean.getFirmaReason());
     this.setFirmaIdiomaDocument(__bean.getFirmaIdiomaDocument());
@@ -201,6 +203,20 @@ public class EvidenciaBean implements Evidencia {
 		this.nom = _nom_;
 	};
 
+	public java.lang.String getPersonaNif() {
+		return(personaNif);
+	};
+	public void setPersonaNif(java.lang.String _personaNif_) {
+		this.personaNif = _personaNif_;
+	};
+
+	public java.lang.String getPersonaUsername() {
+		return(personaUsername);
+	};
+	public void setPersonaUsername(java.lang.String _personaUsername_) {
+		this.personaUsername = _personaUsername_;
+	};
+
 	public java.lang.String getPersonaNom() {
 		return(personaNom);
 	};
@@ -220,13 +236,6 @@ public class EvidenciaBean implements Evidencia {
 	};
 	public void setPersonaLlinatge2(java.lang.String _personaLlinatge2_) {
 		this.personaLlinatge2 = _personaLlinatge2_;
-	};
-
-	public java.lang.String getPersonaNif() {
-		return(personaNif);
-	};
-	public void setPersonaNif(java.lang.String _personaNif_) {
-		this.personaNif = _personaNif_;
 	};
 
 	public java.lang.String getPersonaEmail() {
@@ -369,18 +378,18 @@ public class EvidenciaBean implements Evidencia {
 		this.localitzacioLongitud = _localitzacioLongitud_;
 	};
 
-	public java.lang.String getLocalitzacioCiutat() {
-		return(localitzacioCiutat);
-	};
-	public void setLocalitzacioCiutat(java.lang.String _localitzacioCiutat_) {
-		this.localitzacioCiutat = _localitzacioCiutat_;
-	};
-
 	public java.lang.String getLocalitzacioRegio() {
 		return(localitzacioRegio);
 	};
 	public void setLocalitzacioRegio(java.lang.String _localitzacioRegio_) {
 		this.localitzacioRegio = _localitzacioRegio_;
+	};
+
+	public java.lang.String getLocalitzacioCiutat() {
+		return(localitzacioCiutat);
+	};
+	public void setLocalitzacioCiutat(java.lang.String _localitzacioCiutat_) {
+		this.localitzacioCiutat = _localitzacioCiutat_;
 	};
 
 	public java.lang.String getLocalitzacioPais() {
@@ -448,10 +457,11 @@ public class EvidenciaBean implements Evidencia {
     EvidenciaBean __tmp = new EvidenciaBean();
     __tmp.setEvidenciaID(__bean.getEvidenciaID());
     __tmp.setNom(__bean.getNom());
+    __tmp.setPersonaNif(__bean.getPersonaNif());
+    __tmp.setPersonaUsername(__bean.getPersonaUsername());
     __tmp.setPersonaNom(__bean.getPersonaNom());
     __tmp.setPersonaLlinatge1(__bean.getPersonaLlinatge1());
     __tmp.setPersonaLlinatge2(__bean.getPersonaLlinatge2());
-    __tmp.setPersonaNif(__bean.getPersonaNif());
     __tmp.setPersonaEmail(__bean.getPersonaEmail());
     __tmp.setPersonaMobil(__bean.getPersonaMobil());
     __tmp.setDataInici(__bean.getDataInici());
@@ -472,8 +482,8 @@ public class EvidenciaBean implements Evidencia {
     __tmp.setLocalitzacioCodiPostal(__bean.getLocalitzacioCodiPostal());
     __tmp.setLocalitzacioLatitud(__bean.getLocalitzacioLatitud());
     __tmp.setLocalitzacioLongitud(__bean.getLocalitzacioLongitud());
-    __tmp.setLocalitzacioCiutat(__bean.getLocalitzacioCiutat());
     __tmp.setLocalitzacioRegio(__bean.getLocalitzacioRegio());
+    __tmp.setLocalitzacioCiutat(__bean.getLocalitzacioCiutat());
     __tmp.setLocalitzacioPais(__bean.getLocalitzacioPais());
     __tmp.setFirmaReason(__bean.getFirmaReason());
     __tmp.setFirmaIdiomaDocument(__bean.getFirmaIdiomaDocument());
